--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/runtime-corejs3": "^7.22.5",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
