--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^1.1.5",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
