--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/node": "^20.3.2",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@types/react-redux": "^7.1.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^1.1.5",
+    "react-router-dom": "^6.14.0",
+    "react-scripts": "^5.0.1",
     "redux-thunk": "^2.4.2",
-    "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "typescript": "^5.1.5",
+    "web-vitals": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
